# log2graph

api/: app.py
core/: .gitignore  BGL Dataset Test.ipynb
core-library/: README.md  setup.cfg
core-library/src/log_datasets/: bgl_dataset.py  dataset.py  datasets.py  hdfs_dataset.py  nova_dataset.py
core-library/src/logs2graphs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core-library/src/utils/: Drain.py  graphs_util.py  window_utils.py
core/datasets/: bgl_dataset.py  dataset.py  hdfs_dataset.py  hdfs_new.py  nova_dataset.py
core/utils/: Drain.py  graphs_util.py  window_utils.py
web/: Program.cs  _Imports.razor  web.sln
web/Models/: Experiment.cs  ExperimentsDto.cs  Window.cs  WindowRequest.cs  Windows.cs  WindowsRequest.cs
web/Pages/: FetchData.razor
web/Pages/Components/: AddExperiment.razor  ListExperiments.razor  WindowVisualization.razor  WindowsList.razor
web/Properties/: launchSettings.json
web/Shared/: MainLayout.razor  NavMenu.razor
web/wwwroot/: index.html
