[metadata]
name = logs2graphs
version = 0.0.3
author = Stefan Andonov
author_email = stefan.andonov@finki.ukim.mk
description = Library for extraction of graph data from logs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    gdown
    networkx
    numpy
    pandas
    python-dateutil
    regex
    requests
    pyvis
    importlib-metadata; python_version<"3.8"
[options.packages.find]
where = src
